--- a/socials/socials4.html
+++ b/socials/socials4.html
@@ -61,6 +61,10 @@
       background-color: #4267B2;
     }
 
+    .github:hover{
+      background-color: #34495E;
+    }
+    
     .instagram:hover{
       background: #f86ee1;
     }
