--- a/socials/socials4.html
+++ b/socials/socials4.html
@@ -22,7 +22,7 @@
 
     body {
       display: grid;
-      place-items: center;
+      place-items: left;
     }
 
     .wrapper {
@@ -46,7 +46,7 @@
     }
 
     .icon {
-      font-size: 1em;
+      font-size: 2em;
     }
 
     .blog:hover{
@@ -54,7 +54,7 @@
     }
 
     .email:hover{
-      background-color: #23c8c8;
+      background-color: #FA2626;
     }
 
     .facebook:hover{
