--- a/socials/socials4.html
+++ b/socials/socials4.html
@@ -49,10 +49,24 @@
       font-size: 2em;
     }
 
+    /* Adding custom colors */
+    .email {
+      background-color: #FA2626; /* Cor personalizada para o ícone de e-mail */
+    }
+
+    .github {
+      background-color: #34495E; /* Cor personalizada para o ícone do GitHub */
+    }
+
+    .linkedin {
+      background-color: #0e76a8; /* Cor personalizada para o ícone do LinkedIn */
+    }
+    
+/*
     .email:hover{
       background-color: #FA2626;
     }
-
+  
     .github:hover{
       background-color: #34495E;
     }
@@ -60,7 +74,7 @@
     .linkedin:hover{
       background-color: #0e76a8;
     }
-
+*/
     .social {
       position: relative;
       margin: 10px;
