--- a/socials/socials4.html
+++ b/socials/socials4.html
@@ -54,7 +54,7 @@
     }
 
     .github {
-      background-color: #34495E; /* Cor personalizada para o ícone do GitHub */
+      background-color: #171515; /* Cor personalizada para o ícone do GitHub */
     }
 
     .linkedin {
