--- a/socials/socials_using.html
+++ b/socials/socials_using.html
@@ -22,13 +22,12 @@
 
     body {
       display: grid;
-      place-items: center;
+      place-items: left;
     }
 
     .wrapper {
       padding-top: 10px;
       display: inline-flex;
-
     }
 
     .fill {
